--- a/homework16/scss/bootstrapm/_custom-variables.scss
+++ b/homework16/scss/bootstrapm/_custom-variables.scss
@@ -11,6 +11,9 @@ $primary:       #ffc155;
 $theme-colors: (
   "primary":    $primary,
 );
+$theme-colors: (
+  "secondary":    $primary,
+);
 
 // button`s color text
 $yiq-contrasted-threshold:  255;
