--- a/homework16/css/bootstrap.css
+++ b/homework16/css/bootstrap.css
@@ -13,7 +13,7 @@
   --gray: #6c757d;
   --gray-dark: #343a40;
   --primary: #ffc155;
-  --secondary: #6c757d;
+  --secondary: #ffc155;
   --success: #28a745;
   --info: #17a2b8;
   --warning: #ffc107;
@@ -431,31 +431,31 @@ fieldset:disabled a.btn {
 
 .btn-secondary {
   color: #fff;
-  background-color: #6c757d;
-  border-color: #6c757d;
+  background-color: #ffc155;
+  border-color: #ffc155;
 }
 .btn-secondary:hover {
   color: #fff;
-  background-color: #5a6268;
-  border-color: #545b62;
+  background-color: #ffb32f;
+  border-color: #ffae22;
 }
 .btn-secondary:focus, .btn-secondary.focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(255, 193, 85, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(255, 193, 85, 0.5);
 }
 .btn-secondary.disabled, .btn-secondary:disabled {
   color: #fff;
-  background-color: #6c757d;
-  border-color: #6c757d;
+  background-color: #ffc155;
+  border-color: #ffc155;
 }
 .btn-secondary:not(:disabled):not(.disabled):active, .btn-secondary:not(:disabled):not(.disabled).active, .show > .btn-secondary.dropdown-toggle {
   color: #fff;
-  background-color: #545b62;
-  border-color: #4e555b;
+  background-color: #ffae22;
+  border-color: #ffaa15;
 }
 .btn-secondary:not(:disabled):not(.disabled):active:focus, .btn-secondary:not(:disabled):not(.disabled).active:focus, .show > .btn-secondary.dropdown-toggle:focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(255, 193, 85, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(255, 193, 85, 0.5);
 }
 
 .btn-success {
@@ -662,32 +662,32 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-secondary {
-  color: #6c757d;
+  color: #ffc155;
   background-color: transparent;
   background-image: none;
-  border-color: #6c757d;
+  border-color: #ffc155;
 }
 .btn-outline-secondary:hover {
   color: #fff;
-  background-color: #6c757d;
-  border-color: #6c757d;
+  background-color: #ffc155;
+  border-color: #ffc155;
 }
 .btn-outline-secondary:focus, .btn-outline-secondary.focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(255, 193, 85, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(255, 193, 85, 0.5);
 }
 .btn-outline-secondary.disabled, .btn-outline-secondary:disabled {
-  color: #6c757d;
+  color: #ffc155;
   background-color: transparent;
 }
 .btn-outline-secondary:not(:disabled):not(.disabled):active, .btn-outline-secondary:not(:disabled):not(.disabled).active, .show > .btn-outline-secondary.dropdown-toggle {
   color: #fff;
-  background-color: #6c757d;
-  border-color: #6c757d;
+  background-color: #ffc155;
+  border-color: #ffc155;
 }
 .btn-outline-secondary:not(:disabled):not(.disabled):active:focus, .btn-outline-secondary:not(:disabled):not(.disabled).active:focus, .show > .btn-outline-secondary.dropdown-toggle:focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(255, 193, 85, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(255, 193, 85, 0.5);
 }
 
 .btn-outline-success {
@@ -915,10 +915,19 @@ input[type="button"].btn-block {
 }
 
 .btn-primary {
-  padding: 12px 44px;
+  padding: 11px 20px;
   font-size: 0.8rem;
 }
 .btn-primary:hover, .btn-primary:focus {
+  background: #ffc155;
+  color: white;
+}
+
+.btn-secondary {
+  padding: 12px 44px;
+  font-size: 0.8rem;
+}
+.btn-secondary:hover, .btn-secondary:focus {
   background: #ffc155;
   color: white;
 }
@@ -3733,13 +3742,13 @@ button.bg-primary:focus {
 }
 
 .bg-secondary {
-  background-color: #6c757d !important;
+  background-color: #ffc155 !important;
 }
 
 a.bg-secondary:hover, a.bg-secondary:focus,
 button.bg-secondary:hover,
 button.bg-secondary:focus {
-  background-color: #545b62 !important;
+  background-color: #ffae22 !important;
 }
 
 .bg-success {
@@ -3855,7 +3864,7 @@ button.bg-dark:focus {
 }
 
 .border-secondary {
-  border-color: #6c757d !important;
+  border-color: #ffc155 !important;
 }
 
 .border-success {
@@ -7049,11 +7058,11 @@ a.text-primary:hover, a.text-primary:focus {
 }
 
 .text-secondary {
-  color: #6c757d !important;
+  color: #ffc155 !important;
 }
 
 a.text-secondary:hover, a.text-secondary:focus {
-  color: #545b62 !important;
+  color: #ffae22 !important;
 }
 
 .text-success {
