chng  margins and fonts in form

--- a/homework16/scss/bootstrapm/_custom-variables.scss
+++ b/homework16/scss/bootstrapm/_custom-variables.scss
@@ -30,3 +30,9 @@ $input-focus-border-color: $input-focus-color;
 $input-box-shadow: $input-focus-color; 
 $input-focus-box-shadow: $input-focus-color;
 $input-focus-box-shadow: $input-focus-color;
+
+// forms
+$font-size-base:              .9rem; 
+$input-btn-padding-y:         .75rem;
+$input-btn-padding-x:         .7rem;
+
