--- a/homework16/scss/components/_module-cards.scss
+++ b/homework16/scss/components/_module-cards.scss
@@ -29,7 +29,8 @@
     &-mesage {
         font-size: .85rem;
         line-height: 1.4rem;
-        margin-bottom: 20px;
+        padding-top: 2px;
+        margin-bottom: 18px;
         &::before, 
         &::after {
             position: absolute; 
