--- a/homework16/css/main.css
+++ b/homework16/css/main.css
@@ -169,12 +169,10 @@ p {
   color: white;
   background: #ffc155;
 }
-.aboutus-img {
-  max-height: 623px;
-}
 .aboutus-article {
-  margin-top: 157px;
-  margin-left: 4.1rem;
+  height: auto;
+  margin: 15.7% 0;
+  padding: 1.45rem 0 1.45rem 4.1rem;
 }
 .aboutus-article p {
   margin-top: 18px;
