--- a/homework16/scss/components/_module-contacts-footer.scss
+++ b/homework16/scss/components/_module-contacts-footer.scss
@@ -1,6 +1,6 @@
 // contacts
 .contacts {
-    padding-top: 148px;
+    padding-top: 147px;
     padding-bottom: 49px;
     &-subscribe {
         margin: 36px 9.3% 93px 9%;
@@ -15,8 +15,9 @@
         }
     }
     &-button {
+        line-height: 1.45rem;
         padding-left: 52px;
-        padding-right: 52px;
+        padding-right: 53px;
     }
     .address {
         margin-bottom: 67px;
