did adaptive designe in Services module, and PP after

--- a/homework16/css/main.css
+++ b/homework16/css/main.css
@@ -135,7 +135,7 @@ p {
   letter-spacing: .3px;
 }
 .services-items {
-  padding: 0 0 55px 0;
+  padding: 0 0px 55px 0;
   margin: 0;
 }
 .services-items p {
@@ -156,13 +156,20 @@ p {
   margin: 0 22px 0 0;
 }
 .services-items .respons-img {
-  margin: 0 0 0 17px;
+  padding: 0;
+  margin: 0 17px 0 0;
 }
 .services-items .rocket-img {
-  margin: 0 0 0 17px;
+  padding: 0;
+  margin: 0 17px 0 0;
 }
 .services-items .dollar-img {
-  margin: -4px 0 0 33px;
+  padding: 0;
+  margin: -4px 13px 0 20px;
+}
+
+.services-main-left {
+  margin-right: 50px;
 }
 
 .aboutus {
