--- a/homework16/scss/bootstrapm/_custom-variables.scss
+++ b/homework16/scss/bootstrapm/_custom-variables.scss
@@ -6,7 +6,7 @@ $container-max-widths: (
   xl: 1170px
 );
 
-// button
+// theme
 $primary:       #ffc155;
 $theme-colors: (
   "primary":    $primary,
@@ -14,6 +14,11 @@ $theme-colors: (
 $theme-colors: (
   "secondary":    $primary,
 );
+
+//navbar
+$navbar-padding-x: 0px;
+$navbar-nav-link-padding-x: 17.8px;
+$navbar-light-toggler-border-color: $primary;
 
 // button`s color text
 $yiq-contrasted-threshold:  255;
