--- a/homework16/scss/bootstrapm/bootstrap.scss
+++ b/homework16/scss/bootstrapm/bootstrap.scss
@@ -11,7 +11,12 @@
 @import "../../node_modules/bootstrap/scss/forms";
 @import "../../node_modules/bootstrap/scss/nav";
 @import "nav";
+
+
 @import "../../node_modules/bootstrap/scss/navbar";
+@import "../../node_modules/bootstrap/scss/transitions";
+
+
 @import "../../node_modules/bootstrap/scss/grid";
 @import "../../node_modules/bootstrap/scss/images";
 @import "../../node_modules/bootstrap/scss/type";
@@ -20,7 +25,6 @@
 
 //  @import "../../node_modules/bootstrap/scss/code";
 //  @import "../../node_modules/bootstrap/scss/tables";
-//  @import "../../node_modules/bootstrap/scss/transitions";
 //  @import "../../node_modules/bootstrap/scss/dropdown";
 //  @import "../../node_modules/bootstrap/scss/button-group";
 //  @import "../../node_modules/bootstrap/scss/custom-forms";
