--- a/homework16/scss/components/_module-header.scss
+++ b/homework16/scss/components/_module-header.scss
@@ -2,4 +2,10 @@
     &-logo {
         margin: 21px 0;
     }
+    // &-menu {
+    //     // padding-right: 0px;
+    //     a {
+    //         // padding: 10px 10px;
+    //     }   
+    // }
 }
