--- a/homework16/css/main.css
+++ b/homework16/css/main.css
@@ -257,11 +257,11 @@ p.price-outside {
 }
 .process-visual {
   margin-top: 105px;
-  margin-left: 7%;
-  margin-right: 7%;
+  padding-left: 9%;
+  padding-right: 9%;
 }
 .process-items {
-  max-width: auto;
+  max-width: 100%;
   max-height: 60px;
   margin-bottom: 98px;
 }
