--- a/homework16/scss/components/_module-process.scss
+++ b/homework16/scss/components/_module-process.scss
@@ -4,11 +4,11 @@
     padding-bottom: 150px;
     &-visual {
     margin-top: 105px;
-    margin-left: 7%;
-    margin-right: 7%;
+    padding-left: 9%;
+    padding-right: 9%;
     }
     &-items {
-    max-width: auto;
+    max-width: 100%;
     max-height: 60px;
     margin-bottom: 98px;
         &-arrow {
