--- a/homework16/scss/components/_module-cards.scss
+++ b/homework16/scss/components/_module-cards.scss
@@ -7,18 +7,20 @@
         margin-top: 55px;
         &-left, 
         &-right {
-            padding: 44px 20px 32px 0;
+            padding: 44px 22px 32px 0;
             margin-bottom: 20px;
         }
         &-left {
+            margin-left: 3px;
             margin-right: 3px;
         }
         &-right {
+            margin-right: 3px;
             margin-left: 3px;
         }
     }
     &-photo {
-        margin-left: 30px;
+        margin-left: 29px;
         width: 100%;
         max-width: 120px;
         height: auto;
@@ -27,10 +29,10 @@
     color: $text-hightlight;
     }
     &-mesage {
-        font-size: .85rem;
-        line-height: 1.4rem;
         padding-top: 2px;
         margin-bottom: 18px;
+        font-size: .85rem;
+        line-height: 1.4rem;
         &::before, 
         &::after {
             position: absolute; 
