--- a/homework16/scss/bootstrapm/_custom-variables.scss
+++ b/homework16/scss/bootstrapm/_custom-variables.scss
@@ -7,7 +7,7 @@ $container-max-widths: (
 );
 
 // theme
-$primary:       #ffc155;
+$primary:       #ffbb42;
 $theme-colors: (
   "primary":    $primary,
 );
@@ -18,7 +18,7 @@ $theme-colors: (
 //navbar
 $navbar-padding-x: 0px;
 $navbar-nav-link-padding-x: 17.8px;
-$navbar-light-toggler-border-color: $primary;
+$navbar-light-color: #868686;
 
 // button`s color text
 $yiq-contrasted-threshold:  255;
