--- a/homework16/scss/components/_module-price.scss
+++ b/homework16/scss/components/_module-price.scss
@@ -8,8 +8,10 @@
     }
     h3 {
         font-size: 1.41rem;
+        font-weight: normal;
         letter-spacing: 1px;
         padding-bottom: 20px;
+        color: $text-priceplan;
     }
     &-plans {
             p {
@@ -23,6 +25,11 @@
         h3 {
             margin-top: 52px;
         }
+        &-items {
+            border-top: 1px solid $border-textprice;
+            padding-top: 11px;
+            margin-bottom: 9px;
+        }
     }
     &-middle {
     background: $bckrnd-secondary;
@@ -33,6 +40,11 @@
         h3 {
             margin-top: 83px;
         }
+        &-items {
+            border-top: 1px solid $border-textprice-hight;
+            padding-top: 11px;
+            margin-bottom: 9px;
+        }
     }
     &-cost {
     vertical-align: -15px;
@@ -41,19 +53,12 @@
     &-dollar {
     font-size: 2.5rem;
     line-height: 2rem;
+    color: $primary;
     }
     .end-toppart {
         margin-bottom: 25px;
     }
-    &-items {
-    border-top: 1px solid $border-blocks;
-    padding-top: 11px;
-    margin-bottom: 9px;
-    }
     &-button {
         margin-top: 22px;
     }
-}
-p.price-outside {
-    color: $price-text;
 }
