--- a/homework16/scss/_vars.scss
+++ b/homework16/scss/_vars.scss
@@ -1,38 +1,1 @@
-$primary: #ffbb42;
-
-// text and fonts
-$fonts-default: Arial, Veranda, sans-serif;
-$internal-text: #7b7b7b;
-$tittles-color: #394b50;
-$link-text: $tittles-color;
-$text-hightlight: #f6772c;
-$text-priceplan: #818b95;
-$text-blockquote: #b0b0b0; 
-$text-cardsprof: #99a9ae;
-$text-phone: #394b50;
-$text-address-circle: #9ea9ac;
-
-// background
-$bckrnd-hightlight: #ffc155;
-$bckrnd-secondary: #709dca;
-$bckrnd-price: #e7edf3;
-$bckrnd-address: #394b50;
-
-// border-colors
-$border-input: #cbcbcb;
-$border-blocks: #e3e7ec;
-$border-textprice: #e2e9f0;
-$border-textprice-hight: #8eb8e2;
-$border-buttons-circle: $bckrnd-secondary;
-
-// nav color 868686 
-// p color 7b7b7b
-// subtitle color 394b50
-// h3 color 394b50
-// h3 price color 818b95
-// h2 color 394b50
-// border aboutus e7ad48 bckrnd about us ffc155
-// cards prof 99a9ae a0afb3
-// e2e9f0
-// 394b50
-// aeb7ba 9ea9ac
+@import 'bootstrapm/custom-variables.scss';
